@@ -20,7 +20,6 @@ requires 'File::Slurp'               => 0;
 requires 'Getopt::Long'              => 0;
 requires 'Nagios::Plugin'            => 0;
 requires 'Nagios::Plugin::Threshold' => 0;
-requires 'Pod::Usage'                => 0;
 requires 'version'                   => 0;
 
 install_script  'check_free_mem';
